qt6/gen_qtablewidget.h

typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QItemSelectionModel QItemSelectionModel;
typedef struct QMetaObject QMetaObject;
typedef struct QMimeData QMimeData;
typedef struct QModelIndex QModelIndex;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QStyleOptionViewItem QStyleOptionViewItem;
typedef struct QTableWidget QTableWidget;
typedef struct QTableWidgetItem QTableWidgetItem;
typedef struct QTableWidgetSelectionRange QTableWidgetSelectionRange;
typedef struct QWidget QWidget;
void QTableWidget_setSortingEnabled(QTableWidget* self, bool enable);
bool QTableWidget_isSortingEnabled(const QTableWidget* self);
void QTableWidget_editItem(QTableWidget* self, QTableWidgetItem* item);
void QTableWidget_openPersistentEditor(QTableWidget* self, QTableWidgetItem* item);
void QTableWidget_closePersistentEditor(QTableWidget* self, QTableWidgetItem* item);
bool QTableWidget_isPersistentEditorOpen(const QTableWidget* self, QTableWidgetItem* item);
QWidget* QTableWidget_cellWidget(const QTableWidget* self, int row, int column);
void QTableWidget_setCellWidget(QTableWidget* self, int row, int column, QWidget* widget);
void QTableWidget_removeCellWidget(QTableWidget* self, int row, int column);
void QTableWidget_setRangeSelected(QTableWidget* self, QTableWidgetSelectionRange* range, bool select);
struct miqt_array /* of QTableWidgetSelectionRange* */  QTableWidget_selectedRanges(const QTableWidget* self);
struct miqt_array /* of QTableWidgetItem* */  QTableWidget_selectedItems(const QTableWidget* self);
struct miqt_array /* of QTableWidgetItem* */  QTableWidget_findItems(const QTableWidget* self, struct miqt_string text, int flags);
int QTableWidget_visualRow(const QTableWidget* self, int logicalRow);
int QTableWidget_visualColumn(const QTableWidget* self, int logicalColumn);
QTableWidgetItem* QTableWidget_itemAt(const QTableWidget* self, QPoint* p);
QTableWidgetItem* QTableWidget_itemAt2(const QTableWidget* self, int x, int y);
QRect* QTableWidget_visualItemRect(const QTableWidget* self, QTableWidgetItem* item);
QTableWidgetItem* QTableWidget_itemPrototype(const QTableWidget* self);
void QTableWidget_setItemPrototype(QTableWidget* self, QTableWidgetItem* item);
void QTableWidget_scrollToItem(QTableWidget* self, QTableWidgetItem* item);
void QTableWidget_insertRow(QTableWidget* self, int row);
void QTableWidget_insertColumn(QTableWidget* self, int column);
void QTableWidget_removeRow(QTableWidget* self, int row);
void QTableWidget_removeColumn(QTableWidget* self, int column);
void QTableWidget_clear(QTableWidget* self);
void QTableWidget_clearContents(QTableWidget* self);
void QTableWidget_itemPressed(QTableWidget* self, QTableWidgetItem* item);
void QTableWidget_connect_itemPressed(QTableWidget* self, intptr_t slot);
void QTableWidget_itemClicked(QTableWidget* self, QTableWidgetItem* item);
void QTableWidget_connect_itemClicked(QTableWidget* self, intptr_t slot);
void QTableWidget_itemDoubleClicked(QTableWidget* self, QTableWidgetItem* item);
void QTableWidget_connect_itemDoubleClicked(QTableWidget* self, intptr_t slot);
void QTableWidget_itemActivated(QTableWidget* self, QTableWidgetItem* item);
void QTableWidget_connect_itemActivated(QTableWidget* self, intptr_t slot);
void QTableWidget_itemEntered(QTableWidget* self, QTableWidgetItem* item);
void QTableWidget_connect_itemEntered(QTableWidget* self, intptr_t slot);
void QTableWidget_itemChanged(QTableWidget* self, QTableWidgetItem* item);
void QTableWidget_connect_itemChanged(QTableWidget* self, intptr_t slot);
void QTableWidget_currentItemChanged(QTableWidget* self, QTableWidgetItem* current, QTableWidgetItem* previous);
void QTableWidget_connect_currentItemChanged(QTableWidget* self, intptr_t slot);
void QTableWidget_itemSelectionChanged(QTableWidget* self);
void QTableWidget_connect_itemSelectionChanged(QTableWidget* self, intptr_t slot);
void QTableWidget_cellPressed(QTableWidget* self, int row, int column);
void QTableWidget_connect_cellPressed(QTableWidget* self, intptr_t slot);
void QTableWidget_cellClicked(QTableWidget* self, int row, int column);
void QTableWidget_connect_cellClicked(QTableWidget* self, intptr_t slot);
void QTableWidget_cellDoubleClicked(QTableWidget* self, int row, int column);
void QTableWidget_connect_cellDoubleClicked(QTableWidget* self, intptr_t slot);
void QTableWidget_cellActivated(QTableWidget* self, int row, int column);
void QTableWidget_connect_cellActivated(QTableWidget* self, intptr_t slot);
void QTableWidget_cellEntered(QTableWidget* self, int row, int column);
void QTableWidget_connect_cellEntered(QTableWidget* self, intptr_t slot);
void QTableWidget_cellChanged(QTableWidget* self, int row, int column);
void QTableWidget_connect_cellChanged(QTableWidget* self, intptr_t slot);
void QTableWidget_currentCellChanged(QTableWidget* self, int currentRow, int currentColumn, int previousRow, int previousColumn);
void QTableWidget_connect_currentCellChanged(QTableWidget* self, intptr_t slot);
struct miqt_string QTableWidget_tr2(const char* s, const char* c);
struct miqt_string QTableWidget_tr3(const char* s, const char* c, int n);
void QTableWidget_sortItems2(QTableWidget* self, int column, int order);
void QTableWidget_scrollToItem2(QTableWidget* self, QTableWidgetItem* item, int hint);
bool QTableWidget_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QTableWidget_virtualbase_metaObject(const void* self);
bool QTableWidget_override_virtual_metacast(void* self, intptr_t slot);
void* QTableWidget_virtualbase_metacast(void* self, const char* param1);
bool QTableWidget_override_virtual_metacall(void* self, intptr_t slot);
int QTableWidget_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QTableWidget_override_virtual_event(void* self, intptr_t slot);
bool QTableWidget_virtualbase_event(void* self, QEvent* e);
bool QTableWidget_override_virtual_mimeTypes(void* self, intptr_t slot);
struct miqt_array /* of struct miqt_string */  QTableWidget_virtualbase_mimeTypes(const void* self);
bool QTableWidget_override_virtual_mimeData(void* self, intptr_t slot);
QMimeData* QTableWidget_virtualbase_mimeData(const void* self, struct miqt_array /* of QTableWidgetItem* */  items);
bool QTableWidget_override_virtual_dropMimeData(void* self, intptr_t slot);
bool QTableWidget_virtualbase_dropMimeData(void* self, int row, int column, QMimeData* data, int action);
bool QTableWidget_override_virtual_supportedDropActions(void* self, intptr_t slot);
int QTableWidget_virtualbase_supportedDropActions(const void* self);
bool QTableWidget_override_virtual_dropEvent(void* self, intptr_t slot);
void QTableWidget_virtualbase_dropEvent(void* self, QDropEvent* event);
bool QTableWidget_override_virtual_setRootIndex(void* self, intptr_t slot);
void QTableWidget_virtualbase_setRootIndex(void* self, QModelIndex* index);
bool QTableWidget_override_virtual_setSelectionModel(void* self, intptr_t slot);
void QTableWidget_virtualbase_setSelectionModel(void* self, QItemSelectionModel* selectionModel);
bool QTableWidget_override_virtual_doItemsLayout(void* self, intptr_t slot);
void QTableWidget_virtualbase_doItemsLayout(void* self);
bool QTableWidget_override_virtual_visualRect(void* self, intptr_t slot);
QRect* QTableWidget_virtualbase_visualRect(const void* self, QModelIndex* index);
bool QTableWidget_override_virtual_scrollTo(void* self, intptr_t slot);
void QTableWidget_virtualbase_scrollTo(void* self, QModelIndex* index, int hint);
bool QTableWidget_override_virtual_indexAt(void* self, intptr_t slot);
QModelIndex* QTableWidget_virtualbase_indexAt(const void* self, QPoint* p);
bool QTableWidget_override_virtual_scrollContentsBy(void* self, intptr_t slot);
void QTableWidget_virtualbase_scrollContentsBy(void* self, int dx, int dy);
bool QTableWidget_override_virtual_initViewItemOption(void* self, intptr_t slot);
void QTableWidget_virtualbase_initViewItemOption(const void* self, QStyleOptionViewItem* option);
bool QTableWidget_override_virtual_paintEvent(void* self, intptr_t slot);
void QTableWidget_virtualbase_paintEvent(void* self, QPaintEvent* e);