qt6/gen_qtablewidget.nim

proc fcQTableWidget_setSortingEnabled(self: pointer, enable: bool): void {.importc: "QTableWidget_setSortingEnabled".}
proc fcQTableWidget_isSortingEnabled(self: pointer, ): bool {.importc: "QTableWidget_isSortingEnabled".}
proc fcQTableWidget_editItem(self: pointer, item: pointer): void {.importc: "QTableWidget_editItem".}
proc fcQTableWidget_openPersistentEditor(self: pointer, item: pointer): void {.importc: "QTableWidget_openPersistentEditor".}
proc fcQTableWidget_closePersistentEditor(self: pointer, item: pointer): void {.importc: "QTableWidget_closePersistentEditor".}
proc fcQTableWidget_isPersistentEditorOpen(self: pointer, item: pointer): bool {.importc: "QTableWidget_isPersistentEditorOpen".}
proc fcQTableWidget_cellWidget(self: pointer, row: cint, column: cint): pointer {.importc: "QTableWidget_cellWidget".}
proc fcQTableWidget_setCellWidget(self: pointer, row: cint, column: cint, widget: pointer): void {.importc: "QTableWidget_setCellWidget".}
proc fcQTableWidget_removeCellWidget(self: pointer, row: cint, column: cint): void {.importc: "QTableWidget_removeCellWidget".}
proc fcQTableWidget_setRangeSelected(self: pointer, range: pointer, select: bool): void {.importc: "QTableWidget_setRangeSelected".}
proc fcQTableWidget_selectedRanges(self: pointer, ): struct_miqt_array {.importc: "QTableWidget_selectedRanges".}
proc fcQTableWidget_selectedItems(self: pointer, ): struct_miqt_array {.importc: "QTableWidget_selectedItems".}
proc fcQTableWidget_findItems(self: pointer, text: struct_miqt_string, flags: cint): struct_miqt_array {.importc: "QTableWidget_findItems".}
proc fcQTableWidget_visualRow(self: pointer, logicalRow: cint): cint {.importc: "QTableWidget_visualRow".}
proc fcQTableWidget_visualColumn(self: pointer, logicalColumn: cint): cint {.importc: "QTableWidget_visualColumn".}
proc fcQTableWidget_itemAt(self: pointer, p: pointer): pointer {.importc: "QTableWidget_itemAt".}
proc fcQTableWidget_itemAt2(self: pointer, x: cint, y: cint): pointer {.importc: "QTableWidget_itemAt2".}
proc fcQTableWidget_visualItemRect(self: pointer, item: pointer): pointer {.importc: "QTableWidget_visualItemRect".}
proc fcQTableWidget_itemPrototype(self: pointer, ): pointer {.importc: "QTableWidget_itemPrototype".}
proc fcQTableWidget_setItemPrototype(self: pointer, item: pointer): void {.importc: "QTableWidget_setItemPrototype".}
proc fcQTableWidget_scrollToItem(self: pointer, item: pointer): void {.importc: "QTableWidget_scrollToItem".}
proc fcQTableWidget_insertRow(self: pointer, row: cint): void {.importc: "QTableWidget_insertRow".}
proc fcQTableWidget_insertColumn(self: pointer, column: cint): void {.importc: "QTableWidget_insertColumn".}
proc fcQTableWidget_removeRow(self: pointer, row: cint): void {.importc: "QTableWidget_removeRow".}
proc fcQTableWidget_removeColumn(self: pointer, column: cint): void {.importc: "QTableWidget_removeColumn".}
proc fcQTableWidget_clear(self: pointer, ): void {.importc: "QTableWidget_clear".}
proc fcQTableWidget_clearContents(self: pointer, ): void {.importc: "QTableWidget_clearContents".}
proc fcQTableWidget_itemPressed(self: pointer, item: pointer): void {.importc: "QTableWidget_itemPressed".}
proc fQTableWidget_connect_itemPressed(self: pointer, slot: int) {.importc: "QTableWidget_connect_itemPressed".}
proc fcQTableWidget_itemClicked(self: pointer, item: pointer): void {.importc: "QTableWidget_itemClicked".}
proc fQTableWidget_connect_itemClicked(self: pointer, slot: int) {.importc: "QTableWidget_connect_itemClicked".}
proc fcQTableWidget_itemDoubleClicked(self: pointer, item: pointer): void {.importc: "QTableWidget_itemDoubleClicked".}
proc fQTableWidget_connect_itemDoubleClicked(self: pointer, slot: int) {.importc: "QTableWidget_connect_itemDoubleClicked".}
proc fcQTableWidget_itemActivated(self: pointer, item: pointer): void {.importc: "QTableWidget_itemActivated".}
proc fQTableWidget_connect_itemActivated(self: pointer, slot: int) {.importc: "QTableWidget_connect_itemActivated".}
proc fcQTableWidget_itemEntered(self: pointer, item: pointer): void {.importc: "QTableWidget_itemEntered".}
proc fQTableWidget_connect_itemEntered(self: pointer, slot: int) {.importc: "QTableWidget_connect_itemEntered".}
proc fcQTableWidget_itemChanged(self: pointer, item: pointer): void {.importc: "QTableWidget_itemChanged".}
proc fQTableWidget_connect_itemChanged(self: pointer, slot: int) {.importc: "QTableWidget_connect_itemChanged".}
proc fcQTableWidget_currentItemChanged(self: pointer, current: pointer, previous: pointer): void {.importc: "QTableWidget_currentItemChanged".}
proc fQTableWidget_connect_currentItemChanged(self: pointer, slot: int) {.importc: "QTableWidget_connect_currentItemChanged".}
proc fcQTableWidget_itemSelectionChanged(self: pointer, ): void {.importc: "QTableWidget_itemSelectionChanged".}
proc fQTableWidget_connect_itemSelectionChanged(self: pointer, slot: int) {.importc: "QTableWidget_connect_itemSelectionChanged".}
proc fcQTableWidget_cellPressed(self: pointer, row: cint, column: cint): void {.importc: "QTableWidget_cellPressed".}
proc fQTableWidget_connect_cellPressed(self: pointer, slot: int) {.importc: "QTableWidget_connect_cellPressed".}
proc fcQTableWidget_cellClicked(self: pointer, row: cint, column: cint): void {.importc: "QTableWidget_cellClicked".}
proc fQTableWidget_connect_cellClicked(self: pointer, slot: int) {.importc: "QTableWidget_connect_cellClicked".}
proc fcQTableWidget_cellDoubleClicked(self: pointer, row: cint, column: cint): void {.importc: "QTableWidget_cellDoubleClicked".}
proc fQTableWidget_connect_cellDoubleClicked(self: pointer, slot: int) {.importc: "QTableWidget_connect_cellDoubleClicked".}
proc fcQTableWidget_cellActivated(self: pointer, row: cint, column: cint): void {.importc: "QTableWidget_cellActivated".}
proc fQTableWidget_connect_cellActivated(self: pointer, slot: int) {.importc: "QTableWidget_connect_cellActivated".}
proc fcQTableWidget_cellEntered(self: pointer, row: cint, column: cint): void {.importc: "QTableWidget_cellEntered".}
proc fQTableWidget_connect_cellEntered(self: pointer, slot: int) {.importc: "QTableWidget_connect_cellEntered".}
proc fcQTableWidget_cellChanged(self: pointer, row: cint, column: cint): void {.importc: "QTableWidget_cellChanged".}
proc fQTableWidget_connect_cellChanged(self: pointer, slot: int) {.importc: "QTableWidget_connect_cellChanged".}
proc fcQTableWidget_currentCellChanged(self: pointer, currentRow: cint, currentColumn: cint, previousRow: cint, previousColumn: cint): void {.importc: "QTableWidget_currentCellChanged".}
proc fQTableWidget_connect_currentCellChanged(self: pointer, slot: int) {.importc: "QTableWidget_connect_currentCellChanged".}
proc fcQTableWidget_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QTableWidget_tr2".}
proc fcQTableWidget_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QTableWidget_tr3".}
proc fcQTableWidget_sortItems2(self: pointer, column: cint, order: cint): void {.importc: "QTableWidget_sortItems2".}
proc fcQTableWidget_scrollToItem2(self: pointer, item: pointer, hint: cint): void {.importc: "QTableWidget_scrollToItem2".}
proc fQTableWidget_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QTableWidget_virtualbase_metaObject".}
proc fcQTableWidget_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_metaObject".}
proc fQTableWidget_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QTableWidget_virtualbase_metacast".}
proc fcQTableWidget_override_virtual_metacast(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_metacast".}
proc fQTableWidget_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QTableWidget_virtualbase_metacall".}
proc fcQTableWidget_override_virtual_metacall(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_metacall".}
proc fQTableWidget_virtualbase_event(self: pointer, e: pointer): bool{.importc: "QTableWidget_virtualbase_event".}
proc fcQTableWidget_override_virtual_event(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_event".}
proc fQTableWidget_virtualbase_mimeTypes(self: pointer, ): struct_miqt_array{.importc: "QTableWidget_virtualbase_mimeTypes".}
proc fcQTableWidget_override_virtual_mimeTypes(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_mimeTypes".}
proc fQTableWidget_virtualbase_mimeData(self: pointer, items: struct_miqt_array): pointer{.importc: "QTableWidget_virtualbase_mimeData".}
proc fcQTableWidget_override_virtual_mimeData(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_mimeData".}
proc fQTableWidget_virtualbase_dropMimeData(self: pointer, row: cint, column: cint, data: pointer, action: cint): bool{.importc: "QTableWidget_virtualbase_dropMimeData".}
proc fcQTableWidget_override_virtual_dropMimeData(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_dropMimeData".}
proc fQTableWidget_virtualbase_supportedDropActions(self: pointer, ): cint{.importc: "QTableWidget_virtualbase_supportedDropActions".}
proc fcQTableWidget_override_virtual_supportedDropActions(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_supportedDropActions".}
proc fQTableWidget_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QTableWidget_virtualbase_dropEvent".}
proc fcQTableWidget_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_dropEvent".}
proc fQTableWidget_virtualbase_setRootIndex(self: pointer, index: pointer): void{.importc: "QTableWidget_virtualbase_setRootIndex".}
proc fcQTableWidget_override_virtual_setRootIndex(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_setRootIndex".}
proc fQTableWidget_virtualbase_setSelectionModel(self: pointer, selectionModel: pointer): void{.importc: "QTableWidget_virtualbase_setSelectionModel".}
proc fcQTableWidget_override_virtual_setSelectionModel(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_setSelectionModel".}
proc fQTableWidget_virtualbase_doItemsLayout(self: pointer, ): void{.importc: "QTableWidget_virtualbase_doItemsLayout".}
proc fcQTableWidget_override_virtual_doItemsLayout(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_doItemsLayout".}
proc fQTableWidget_virtualbase_visualRect(self: pointer, index: pointer): pointer{.importc: "QTableWidget_virtualbase_visualRect".}
proc fcQTableWidget_override_virtual_visualRect(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_visualRect".}
proc fQTableWidget_virtualbase_scrollTo(self: pointer, index: pointer, hint: cint): void{.importc: "QTableWidget_virtualbase_scrollTo".}
proc fcQTableWidget_override_virtual_scrollTo(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_scrollTo".}
proc fQTableWidget_virtualbase_indexAt(self: pointer, p: pointer): pointer{.importc: "QTableWidget_virtualbase_indexAt".}
proc fcQTableWidget_override_virtual_indexAt(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_indexAt".}
proc fQTableWidget_virtualbase_scrollContentsBy(self: pointer, dx: cint, dy: cint): void{.importc: "QTableWidget_virtualbase_scrollContentsBy".}
proc fcQTableWidget_override_virtual_scrollContentsBy(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_scrollContentsBy".}
proc fQTableWidget_virtualbase_initViewItemOption(self: pointer, option: pointer): void{.importc: "QTableWidget_virtualbase_initViewItemOption".}
proc fcQTableWidget_override_virtual_initViewItemOption(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_initViewItemOption".}
proc fQTableWidget_virtualbase_paintEvent(self: pointer, e: pointer): void{.importc: "QTableWidget_virtualbase_paintEvent".}
proc fcQTableWidget_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_paintEvent".}
